# NuRaftOnTheRocks

./: .gitmodules  CMakeLists.txt  README.md
api/: nuraft_on_the_rocks.proto
scripts/: runtests.sh
src/: main.cpp  run_server.hxx
src/common/: grpc_server.hxx  kv_server_interface.hxx  raft_kv_server.hxx  state_machine_interface.hxx
src/multi_in_memory/: state_machine.hxx
src/multi_rocksdb/: state_machine.hxx
src/single_in_memory/: kv_server_impl.hxx
src/single_rocksdb/: kv_server_impl.hxx
tests/: CMakeLists.txt  common.hxx  common_tests.hxx  multi_in_memory_test.cxx  multi_rocksdb_test.cxx  single_in_memory_test.cxx  single_rocksdb_test.cxx
